--- a/css/styles.css
+++ b/css/styles.css
@@ -442,4 +442,28 @@ footer p{
 	display: inline-block;
 }
 
-
+/*Medias Querys*/
+@media screen and (max-width:700px){
+	.nav2{
+		color: #fff;
+	}
+	.icono{
+		display: block;
+	}
+	.enlaces{
+		position: fixed;
+		top: 80px;
+		background: var(--color4);
+		left: 0;
+		height: 100%;
+		transition: 1s;
+	}
+	.enlaces a{
+		display: block;
+		width: 100%;
+		height: 50px;
+		padding: 20px;
+		text-align: center;
+		color: var(--color5);
+	}
+}
