--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ img{
 
 }
 /*SECCION  DE PRECARGA*/
-/*.hidden{
+.hidden{
   overflow: hidden;
 }
 
@@ -110,7 +110,7 @@ img{
   justify-content: center;
   align-items: center;
 }
-*/
+
 .lds-facebook {
   display: inline-block;
   position: relative;
@@ -384,8 +384,8 @@ nav .enlaces a:hover{
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
-.galeria-work .cont-work{
-	width: 30%;
+.cont-work{
+	width: 31%;
 	border-block: 0 0 6px rgba(89, 43, 43, .5);
 	height: 300px;
 	overflow: hidden;
@@ -449,6 +449,7 @@ footer p{
 	}
 	.icono{
 		display: block;
+		cursor: pointer;
 	}
 	.enlaces{
 		position: fixed;
@@ -457,6 +458,8 @@ footer p{
 		left: 0;
 		height: 100%;
 		transition: 1s;
+		width: 0;
+		overflow: hidden;
 	}
 	.enlaces a{
 		display: block;
@@ -464,6 +467,38 @@ footer p{
 		height: 50px;
 		padding: 20px;
 		text-align: center;
-		color: var(--color5);
+		background: var(--color5);
+		color: #fff;
+	}
+	.textos>h1{font-size: 70px;}
+	.textos>h2{font-size: 35px;}
+
+	.content-card{
+		width: 48%;
+		margin-bottom: var(--margenes);
+	}
+	:root{
+		--margenes:30px;
+	}
+}
+@media screen and (max-width:500px){
+	:root{
+		--espacios-contenido:25px;
+	}
+	.content-card{
+		width: 90%;
+	}
+	.caja-servicios{
+		width: 90%;
+		margin-bottom: var(--margenes);
+	}
+	.cont-work{
+		width: 85%;
+	}
+	.marca-logo{
+		width: 80%;
+	}
+	.iconos{
+		margin:auto;
 	}
 }
