--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,4 @@
 /**Seccion de Fonts*/
-/** Bariol Serif **/
-@font-face {
-	font-family: 'BariolSerifRegularItalic';
-	src: url('oscarlarios7a.github.io/fonts/BariolSerifRegularItalic/bariol_serif_regular_italic-webfont.eot');
-	src: local('☺'), url('../fonts/BariolSerifRegularItalic/bariol_serif_regular_italic-webfont.woff') format('woff'), url('../fonts/BariolSerifRegularItalic/bariol_serif_regular_italic-webfont.ttf') format('truetype'), url('../fonts/BariolSerifRegularItalic/bariol_serif_regular_italic-webfont.svg') format('svg');
-}
 @font-face {
 	font-family: 'BariolSerifRegular';
 	src: url('oscarlarios7a.github.io/fonts/BariolSerifRegularItalic/bariol_serif_regular-webfont.eot');
@@ -16,72 +10,21 @@
 	src: url('oscarlarios7a.github.io/fonts/Biko/Biko_Regular.eot');
 	src: local('☺'), url('../fonts/Biko/Biko_Regular.woff') format('woff'), url('../fonts/Biko/Biko_Regular.ttf') format('truetype'), url('../fonts/Biko/Biko_Regular.svg') format('svg');
 }
-/**Bifocal Italic**/
-@font-face {
-	font-family: 'BifocalsFontRegular';
-	src: url('oscarlarios7a.github.io/fonts/Biko/Biko_Regular.eot');
-	src: local('☺'), url('../fonts/Biko/Biko_Regular.woff') format('woff'), url('../fonts/Biko/Biko_Regular.ttf') format('truetype'), url('../fonts/Biko/Biko_Regular.svg') format('svg');
-}
-/**Bifocal Regular**/
-@font-face {
-	font-family: 'Biko_Regular';
-	src: url('oscarlarios7a.github.io/fonts/Biko/Biko_Regular.eot');
-	src: local('☺'), url('../fonts/Biko/Biko_Regular.woff') format('woff'), url('../fonts/Biko/Biko_Regular.ttf') format('truetype'), url('../fonts/Biko/Biko_Regular.svg') format('svg');
-}
 
-
-
-/**Dense Regular**/
-@font-face {
-	font-family: 'DenseRegular';
-	src: url('oscarlarios7a.github.io/fonts/DenseRegular/Dense-Regular.eot');
-	src: local('☺'), url('../fonts/DenseRegular/Dense-Regular.woff') format('woff'), url('../fonts/DenseRegular/Dense-Regular.ttf') format('truetype'), url('../fonts/DenseRegular/Dense-Regular.svg') format('svg');
-}
-/**Elianto Regular**/
-@font-face {
-	font-family: 'Elianto';
-	src: url('oscarlarios7a.github.io/fonts/Elianto/Elianto-Regular.eot');
-	src: local('☺'), url('../fonts/Elianto/Elianto-Regular.woff') format('woff'), url('../fonts/Elianto/Elianto-Regular.ttf') format('truetype'), url('../fonts/Elianto/Elianto-Regular.svg') format('svg');
-}
-
-
-/* Color Theme Swatches in RGBA
-.SHADOWLAND-68-69°N-1-rgba { color: rgba(0, 2, 38, 1); }
-.SHADOWLAND-68-69°N-2-rgba { color: rgba(21, 28, 38, 1); }
-.SHADOWLAND-68-69°N-3-rgba { color: rgba(61, 73, 89, 1); }
-.SHADOWLAND-68-69°N-4-rgba { color: rgba(103, 119, 140, 1); }
-.SHADOWLAND-68-69°N-5-rgba { color: rgba(127, 144, 165, 1); }
-*/
-
-/* Color Theme Swatches in RGBA
-.solution-1-rgba { color: rgba(27, 30, 38, 1); }
-.solution-2-rgba { color: rgba(214, 215, 216, 1); }
-.solution-3-rgba { color: rgba(74, 79, 89, 1); }
-.solution-4-rgba { color: rgba(129, 132, 140, 1); }
-.solution-5-rgba { color: rgba(191, 153, 131, 1); }
- */
-
-
-/* Color Theme Swatches in RGBA
-.Man-typing-on-a-laptop-keyboard-1-rgba { color: rgba(38, 24, 26, 1); }
-.Man-typing-on-a-laptop-keyboard-2-rgba { color: rgba(216, 208, 184, 1); }
-.Man-typing-on-a-laptop-keyboard-3-rgba { color: rgba(191, 154, 122, 1); }
-.Man-typing-on-a-laptop-keyboard-4-rgba { color: rgba(165, 100, 86, 1); }
-.Man-typing-on-a-laptop-keyboard-5-rgba { color: rgba(89, 43, 43, 1); }
-*/
 :root{
 	--color1: rgba(0, 2, 38,.534);
 	--color2: rgba(21, 28, 38,.684);
 	--color3: rgba(191, 154, 122,.735);
-	--color4: rgba(165, 100, 86,.834);
-	--color5: rgba(129, 132, 140,.981); ;
+	--color4: rgba(165, 100, 86,.834);/*Variable mia*/
+	--color5: rgba(129, 132, 140,.981);/*Variable mia*/ 
+	--color6: rgba(89, 43, 43, .5);/*Variable mia*/
 	--fondo:#f2f2f2 ;
 	--titulos: 33px;
-	/*Seccion mia*/
-	--subtitulos: 18px;
 	--margenes: 60px ;
 	--espacios: 10px;
 	--espacios-contenido:45px;
+	/*--subtitulos: 18px; 	/*Seccion mia*/
+
 }
 *{
 	margin: 0;
@@ -89,12 +32,13 @@
 	box-sizing: border-box;
 }
 body{
+	/*font-family: 'open sans'; Se quito esta Seccion para agregar propia fuente */
 	background: var(--fondo);
 }
 img{
 	vertical-align: top;
-
 }
+
 /*SECCION  DE PRECARGA*/
 .hidden{
   overflow: hidden;
@@ -147,16 +91,10 @@ img{
     height: 26px;
   }
 }
-
 /*Seccion Header*/
 header{
 	width: 100%;
-	height: 800px;
-	/*background: linear-gradient(to bottom,
-		rgba(211, 135, 20, 0.6),
-		rgba(29,241,171,.6),
-		rgba(7,109,150,.45)),
-		url("../img/fondo.jpg");*/
+	height: 800px; /* height: 800px; se mejor con esta opcion*/
 		background: linear-gradient(to bottom,
 		var(--color3),
 		var(--color2),
@@ -170,8 +108,8 @@ header{
 nav{
 	width: 100%;
 	position: fixed;
-	color: #fff;
 	box-shadow: 0 0 10px 0 var(--color1);
+	/* color: #fff; Se quito para mejor la apariencia */
 }
 .nav1{
 	background: transparent;
@@ -202,12 +140,13 @@ nav .enlaces a{
 	text-decoration: none;
 	border-bottom: 3px solid transparent;
 	color: inherit;
-	font-family:BariolSerifRegular;
-	letter-spacing: 8px;
+	font-family:BariolSerifRegular; /*Carga de Fuente Propia*/
+	letter-spacing: 8px; /*Espaciado entre letras*/
 }
 nav .enlaces a:hover{
-	border-bottom: 3px solid #1498a4;
-	transition: .6s;
+	/*border-bottom: 3px solid #1498a4; Codigo Original*/
+	border-bottom: 3px solid var(--color4); /*cambio de color por las variables*/
+	transition: 0.6s;
 }
 .logo, .logo img{
 	height: 80px;
@@ -260,24 +199,26 @@ nav .enlaces a:hover{
 
 .contenedor h3{
 	font-size: var(--titulos);
-	font-family: BifocalsFontRegular;
-	letter-spacing: 5px;
 	color: var(--color5);
 	margin-bottom: var(--espacios);
+	/*Seccion Mia*/
+	font-family: BifocalsFontRegular;
+	letter-spacing: 5px;
 }
 .contenedor p{
 	font-size: var(--subtitulos);
 	font-weight: 300;
 	color: var(--color4);
-	font-family:BariolSerifRegular;
+	font-family:BariolSerifRegular; /*Fuente Propia*/
 }
+
 .after::after{
 	content: '';
 	display: block;
 	margin: auto;
 	margin-top: var(--espacios);
 	width: 100px;
-	height: 3px;
+	height: 2px; /*height: 3px; Se ve mejor en 3px*/
 	background: var(--color3);
 	margin-bottom: var(--espacios-contenido);
 }
@@ -287,11 +228,11 @@ nav .enlaces a:hover{
 	flex-wrap: wrap;
 }
 .content-card{
-	width: 32%;
-	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+	width: 31%; /*width: 32%; se ve mejor con el 32%*/
+	box-shadow: 0 0 6px 0 var(--color2);
 	overflow: hidden;
 	height: 400px;
-	border-radius:400px;
+	border-radius:400px; /*se ve mejor con radius la imagen del personal que labora en la empresa*/
 }
 
 .people{
@@ -307,15 +248,15 @@ nav .enlaces a:hover{
 	width: 100%;
 	padding: var(--espacios) 0;
 }
-.texto-team>h4{ 
+/*Esta seccion se agrego para mayor estilo de las fuente*/
+.texto-team h4{ 
 		margin-top: 7px;
 		font-size: 16px;
 		font-weight: 200;
 		color: var(--color4);
 		font-family: BifocalsFontRegular;
-
 }
-.texto-team>p{
+.texto-team p{
 		margin-top: 5px;
 		font-size: 14px;
 		font-weight: 100;
@@ -323,16 +264,6 @@ nav .enlaces a:hover{
 		font-family:BariolSerifRegular;
 		letter-spacing: 3px;
 }
-/*SECCION LOGO*/
-.marca-logo img{
-	margin: 10px auto;
-	padding: 0;
-	width:100px;
-    height:100px;
-    text-align: center;
-    border-radius:400px;
-}
-
 /*Seccion Main About*/
 .about{
 	background-image: url(../img/teclado.jpg);
@@ -345,6 +276,11 @@ nav .enlaces a:hover{
 	margin: auto;
 	flex-wrap: wrap;
 }
+.caja-servicios{
+	width: 30%;
+	margin: auto;
+	text-align: center;
+}
 .caja-servicios>h4{
 		margin-bottom: var(--espacios);
 		font-family: BifocalsFontRegular;
@@ -352,23 +288,25 @@ nav .enlaces a:hover{
 .caja-servicios>p{
 	text-align: center;
 }
-
+/* No necesario
 .caja-servicios img {
 	margin: 0 0 10px 0;
-}
+}*/
 .botones-work{
 	overflow:hidden;
-	padding:20px; 
+	/*padding:20px;  */
 }
 .botones-work li{
-	font-family: BifocalsFontRegular;
+	
 	display: inline-block;
 	text-align: center;
-	margin-left: var(--espacios-contenido);
+	margin-left: var(--espacios);
+	margin-bottom: var(--espacios-contenido);
 	padding:6px 12px;
 	border:1px solid var(--color4); 
 	list-style: none;
 	color:var(--color4);
+	font-family: BifocalsFontRegular;
 }
 .botones-work li:hover{
 	background: var(--color5);
@@ -386,7 +324,7 @@ nav .enlaces a:hover{
 }
 .cont-work{
 	width: 31%;
-	border-block: 0 0 6px rgba(89, 43, 43, .5);
+	border-block: 0 0 6px var(--color6);
 	height: 300px;
 	overflow: hidden;
 	margin-bottom: var(--espacios-contenido);
@@ -398,22 +336,20 @@ nav .enlaces a:hover{
 .img-work img{
 	height: 100%;
 	width: 100%;
-	box-shadow: 0 0 20px 0 var(--color5);
+	object-fit:cover;
+	box-shadow: 0 0 20px 0 var(--color5);/*Seccion mia para poner una sombra alas imagenes*/
 }
 .textos-work{
 	height: 10%;
 }
 .textos-work h4{
 	line-height: 30px;
+	font-weight:300;
+	/*Seccion Mia para agregar un color y fuente*/
 	color: var(--color5);
 	font-family: BifocalsFontRegular;
-	font-weight:300px;
+	
 }
-/*section .contenedor{
-	/*background-color: #dd4f2a;
-	background-image: url(../img/teclado.jpg);
-}*/
-
 /*Seccion FOOTER */
 footer{
 	background: url(../img/teclado.jpg);
@@ -426,8 +362,15 @@ footer p{
 	margin: auto;
 	margin-bottom: var(--espacios);
 }
-.margin-logo img{
-	width: 100%;
+.marca-logo img{
+	/*width: 100%;*/
+	/*Seccion Mia*/
+	margin: 10px auto;
+	padding: 0;
+	width:100px;
+	height:100px;
+  text-align: center;
+  border-radius:400px;
 }
 .iconos{
 	display:flex;
